--- a/static/map.css
+++ b/static/map.css
@@ -18,7 +18,7 @@
         margin: 0;
         padding: 0;
       }
-      img{
+      .logo{
           background-color: var(--light-blue);
       }
       #description {
