--- a/templates/events.html
+++ b/templates/events.html
@@ -7,11 +7,8 @@
     <!-- Add Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Add CSS -->
-    <link rel="stylesheet" type="text/css" href="./static/login.css" />
-    <title>Codafind | Map</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <link rel="stylesheet" type="text/css" href="./static/map.css" />
-    <script src="./static/map.js"></script>
+    <link rel="stylesheet" type="text/css" href="./static/events.css" />
+    <title>Codafind | Events</title>
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light">
@@ -26,29 +23,45 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="{{url_for('map')}}">Map</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="#">Profile</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    <input
-      id="pac-input"
-      class="controls"
-      type="text"
-      placeholder="Search Box"
-    />
-    <div id="map"></div>
 
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwKSQXM0Auw40bQ7PNdGixLCoyEVocrKY&callback=initAutocomplete&libraries=places&v=weekly"
-      async
-    ></script>
-    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+      <div id="main" class="container text-center">
+        <div class="row">
+          <div class="col d-flex justify-content-center mb-5 mt-5">
+            <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+                <img src="./static/hackthe6ix.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hack The 6ix 2021</h5>
+                  <p class="card-text">Toronto's largest summer hackathon, going digital this year!</p>
+                  <a href="#" class="btn btn-primary">Join Now</a>
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+                    <img src="./static/peddiehacks.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">PeddieHacks 2021</h5>
+                      <p class="card-text">A 48-hour virtual hackathon - by students, for students.</p>
+                      <a href="#" class="btn btn-primary">Join Now</a>
+                      <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                  </div>
+            </div>
+          </div>
+      </div>
+
     <!-- Add JavaScript plugins for Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
